Development Portal (2019-11-18 shi)
==============================
Add result type and documentary category as filters
Add translations
Add wildcard for document category


Development Portal (2019-11-15 shi)
==============================
Add total commitment threshold
Add translations


Development Portal (2019-11-13 shi)
==============================
Fix org file table layout
Update source links
Fix sector graph peak and chart size
Update themes
Update human values for currency and doc category codes


Development Portal (2019-11-12 shi)
==============================
Add default-finance-type search test
Add tag vocab list
Add translations
Update filter legend and information
Add advance filters info


Development Portal (2019-11-11 shi)
==============================
Add new search test page
Add new search filters
Add code list links and description in table
Fix closing div tag
Add translations for participating-org
Update search query display order
Cleanup icon layout for search queries


Development Portal (2019-11-9 shi)
==============================
Add data source links to org and aid in dflat SAVi
Update table margins


Development Portal (2019-11-7 shi)
==============================
Add download csv and json links to SAVi
Update org view in dflat
Refactor table column widths
Refactor document links
Merge org and aid in dflat SAVi


Development Portal (2019-10-31 shi)
==============================
Result data in dflat


Development Portal (2019-10-30 shi)
==============================
Add default modalities with hover titles
Group sectors in graph
Group transactions
Clean up element count


Development Portal (2019-10-29 shi)
==============================
Add sector table
Update SAVi transaction and budget tables


Development Portal (2019-10-28 shi)
==============================
Sticky headers and counters for tables
Update SAVi with dflat
Add test savi xml for json conversion
Add codelist mapping to dflat
Add title hover text with description