@@ -328,6 +328,7 @@ input.typeahead				{border-bottom:1px solid #000 !important;}
 input#view_search_string, input#view_search_string_only, input.typeahead.tt-hint		{color:#000;}
 .search_filter				{width:960px; margin:0 auto; padding:25px 23px 14px 23px; box-sizing:border-box; border:1px solid #000; border-radius:6px;}
 .search_label				{color:#000;}
+.search_text				{font-size:16px; line-height:20px; padding-bottom:10px;}
 #search_div					{color:#000;}
 a#search_link				{background-color:#000; color:#FFF;}
 a#search_link span			{color:#FFF;}
