@@ -330,6 +330,7 @@ input#view_search_string, input#view_search_string_only, input.typeahead.tt-hint
 .search_filter				{width:960px; margin:0 auto; padding:25px 23px 14px 23px; box-sizing:border-box; background-color:rgba(11,37,60,0.7); border-radius:6px;}
 .search_label				{color:#FFF;}
 #search_div					{color:#FFF;}
+.search_text				{font-size:16px; line-height:20px; padding-bottom:10px;}
 a#search_link				{border:1px solid #2f6381; color:#fff; background:linear-gradient(#68c7ff,#2d5d7b); background:-webkit-linear-gradient(#68c7ff,#2d5d7b); text-shadow:0 -1px 0 #366e90;}
 a#search_link:hover			{border:1px solid #2d5d7b; background:linear-gradient(#50a0d2,#009dff); background:-webkit-linear-gradient(#50a0d2,#009dff); text-shadow:0 -1px 0 #2d5d7b;}
 a#search_link.search_link_disable		{border:1px solid #6f7569; color:#6f7569; background:linear-gradient(rgba(255,255,255,0.6),rgba(255,255,255,0.6)); background:-webkit-linear-gradient(rgba(255,255,255,0.6),rgba(255,255,255,0.6)); text-shadow:initial;}
