@@ -39,7 +39,9 @@ td.filter_title span,
 #country_dropmenu .chosen-container, #publisher_dropmenu .chosen-container	{width:460px; min-width:460px; max-width:460px;}
 
 .search_wrap.mini div#view_search_select_year_min_chosen,
-.search_wrap.mini div#view_search_select_year_max_chosen	{width:145px; min-width:145px; max-width:145px;}
+.search_wrap.mini div#view_search_select_year_max_chosen,
+.search_wrap.mini div#view_search_select_commitment_min_chosen,
+.search_wrap.mini div#view_search_select_commitment_max_chosen	{width:145px; min-width:145px; max-width:145px;}
 
 .search_wrap.maxi,
 .search_wrap.maxi div#view_search_select_policy_chosen	{width:600px; min-width:600px; max-width:600px;}
