@@ -996,6 +996,18 @@ IATI出版社
 #search_document_category_txt
 文件类别
 
+#search_humanitarian_scope_txt
+人道主义范围
+
+#search_flow_type_txt
+默认流类型
+
+#search_collaboration_type_txt
+协作类型
+
+#search_transaction_type_txt
+交易类型
+
 #search_view_txt
 EXPLORE <span>筛选</span>
 
