@@ -1029,6 +1029,18 @@ Result Type
 #search_document_category_txt
 Document Category
 
+#search_humanitarian_scope_txt
+Humanitarian Scope Vocab
+
+#search_flow_type_txt
+Default Flow Type
+
+#search_collaboration_type_txt
+Collaboration Type
+
+#search_transaction_type_txt
+Transaction Type
+
 #search_view_txt
 EXPLORE <span>filters</span>
 
