@@ -998,6 +998,18 @@ Type de résultat
 #search_document_category_txt
 Catégorie de document
 
+#search_humanitarian_scope_txt
+Portée humanitaire
+
+#search_flow_type_txt
+Type de flux par défaut
+
+#search_collaboration_type_txt
+Type de collaboration
+
+#search_transaction_type_txt
+Type de transaction
+
 #search_view_txt
 EXPLORE <span>filtres</span>
 
