@@ -350,19 +350,14 @@
 		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_tag_vocab_txt}</span>
 	</div>
 
-#search_display_finance_type trim=ends
+#search_display_humanitarian_scope trim=ends
 	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_finance_type_txt}</span>
+		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_humanitarian_scope_txt}</span>
 	</div>
 
 #search_display_humanitarian_activity trim=ends
 	<div class="search_query">
 		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_humanitarian_activity_txt}</span>
-	</div>
-
-#search_display_humanitarian_transaction trim=ends
-	<div class="search_query">
-		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_humanitarian_transaction_txt}</span>
 	</div>
 
 #search_display_commitment_min trim=ends
@@ -383,6 +378,26 @@
 #search_display_document_category trim=ends
 	<div class="search_query">
 		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_document_category_txt}</span>
+	</div>
+	
+#search_display_transaction_type trim=ends
+	<div class="search_query">
+		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_transaction_type_txt}</span>
+	</div>
+	
+#search_display_finance_type trim=ends
+	<div class="search_query">
+		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_finance_type_txt}</span>
+	</div>
+	
+#search_display_flow_type trim=ends
+	<div class="search_query">
+		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_flow_type_txt}</span>
+	</div>
+	
+#search_display_collaboration_type trim=ends
+	<div class="search_query">
+		<div class="text">{search_text}</div><span><span class="filter_icon">&#10096;&#10097;</span>{search_collaboration_type_txt}</span>
 	</div>
 
 #main_searchmin
