@@ -995,6 +995,18 @@ IATI प्रकाशक
 #search_document_category_txt
 परिणाम प्रकार
 
+#search_humanitarian_scope_txt
+मानवीय स्कोप
+
+#search_flow_type_txt
+डिफ़ॉल्ट प्रवाह प्रकार
+
+#search_collaboration_type_txt
+सहयोग प्रकार
+
+#search_transaction_type_txt
+सौदे का प्रकार
+
 #search_view_txt
 EXPLORE <span>फिल्टर</span>
 
