@@ -998,6 +998,18 @@ IATI出版
 #search_document_category_txt
 文書カテゴリ
 
+#search_humanitarian_scope_txt
+人道的範囲
+
+#search_flow_type_txt
+デフォルトのフロータイプ
+
+#search_collaboration_type_txt
+コラボレーションタイプ
+
+#search_transaction_type_txt
+取引タイプ
+
 #search_view_txt
 EXPLORE <span>フィルタ</span>
 
