@@ -995,6 +995,18 @@ Tipo de resultado
 #search_document_category_txt
 Categoría de documento
 
+#search_humanitarian_scope_txt
+Alcance humanitario
+
+#search_flow_type_txt
+Tipo de flujo predeterminado
+
+#search_collaboration_type_txt
+Tipo de colaboración
+
+#search_transaction_type_txt
+Tipo de transacción
+
 #search_view_txt
 EXPLORE <span>filtros</span>
 
