@@ -3,6 +3,11 @@ Development Portal (2019-11-18 shi)
 Add result type and documentary category as filters
 Add translations
 Add wildcard for document category
+Add humanitarian-scope, transaction type
+Add default flow, collaboration type
+Update translations with new filters
+Update code source for search filters
+Add labels for new elements
 
 
 Development Portal (2019-11-15 shi)
